--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -14,4 +14,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 EXPOSE 8000
 
 # Command to run the FastAPI server
-CMD ["uvicorn", "app:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "app:app", "--reload", "--host", "0.0.0.0", "--port", "8000", "--timeout-graceful-shutdown", "0"]
